[package]
name = "iovis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "iovis"
path = "src/main.rs"

[lib]
name = "iovis"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.164", features = ["derive", "serde_derive"] }
serde_json = "1.0.97"
unic = "0.9.0"
wasm-bindgen = "0.2"
